--- a/document/book.bib
+++ b/document/book.bib
@@ -561,7 +561,54 @@ schematize and figure it out as top down, real time suduko or something}
   month = apr,
   year = {1995},
   pages = {353-364},
-  file = {/Users/davidjohnbaker/Zotero/storage/S3ZKTMIA/Berz - 1995 - Working Memory in Music A Theoretical Model.pdf}
+  file = {/Users/davidjohnbaker/Zotero/storage/S3ZKTMIA/Berz - 1995 - Working Memory in Music A Theoretical Model.pdf},
+  annote = {Baddely system does not account for music -- what is special about music OR how it is encoded
+
+Williamson paper would be good on this?
+
+This is obviously related to dictation
+
+~~~ Processing AND storage with memory
+
+Is music special as auditory ? hierarchial yes
+
+Lot of lists at the front in terms of what is the actual nature how many notes can you hold in memory
+
+Deutsch thinks there is a special system for tonal pitch
+
+!! DOWLING 1973 for recency effects
+
+People are good at taking info from LTM and transposing, not so much with STM
+
+Most people do contour fine
+
+~~~ need musical training for intervals (LOP)
+
+Dowling and Harwood 1986 -- pitches get put in schema
+
+Cuddy 1971 -- triads and octave melody parts are easier
+
+Include Pembrook 1983 on factors that would be used in short term store much after Ortmann 1933
+
+with increase in scores comes better dicataion ability
+
+Deutsch 1980 -- single tone notation!!!
+
+~~~ Listeners find patterns OR do they find ngrams
+
+~~~ Cohen, Trehub, and Thorpe (1989) -- hange.T rainedl isteners\\
+may encode musical material at a higher level, such that experience\\
+reducedu ncertaintyw ith well-structuredst imuli
+
+~
+
+Stoffer (1985) proposes that musically trained listeners\\
+are able to chunk more efficientlyt han novices.T his would imply that\\
+they are callingo n LTMs trategiesd evelopedt hrought raining.
+
+Gordon 1988 -- audiation as musical inner loop?
+
+Berz 1994 also says that musical aptitude tests are just measures of WMC}
 }
 
 @article{davidbutlerWhyGulfMusic1997a,
@@ -671,6 +718,81 @@ Root
   author = {Karpinski, Gary Steven},
   year = {2000},
   keywords = {Music / Instruction \& Study / Techniques,Music / Instruction \& Study / Theory,Music / Instruction \& Study / Voice,Music / Reference}
+}
+
+@article{ortmannTonalDeterminantsMelodic1933,
+  title = {Some Tonal Determinants of Melodic Memory},
+  volume = {24},
+  issn = {1939-2176(Electronic),0022-0663(Print)},
+  doi = {10.1037/h0075218},
+  abstract = {On the basis of the analysis given, a considerable number of short melodic phrases are arranged on the basis of difficulty of retention. The causes of difficulty are pointed out and important points in training melodic memory are outlined. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  number = {6},
+  journal = {Journal of Educational Psychology},
+  author = {Ortmann, Otto},
+  year = {1933},
+  keywords = {Auditory Perception,Auditory Stimulation,Memory},
+  pages = {454-467},
+  file = {/Users/davidjohnbaker/Zotero/storage/JNUHVKXN/ortmann1983.pdf;/Users/davidjohnbaker/Zotero/storage/5KQGFQYC/1934-00506-001.html}
+}
+
+@article{millerMagicalNumberSeven,
+  title = {The {{Magical Number Seven}}, {{Plus}} or {{Minus Two}}: {{Some Limits}} on {{Our Capacity}} for {{Processing Information}}},
+  language = {en},
+  author = {Miller, George A},
+  pages = {16},
+  file = {/Users/davidjohnbaker/Zotero/storage/ED3TZ929/Miller - The Magical Number Seven, Plus or Minus Two Some .pdf}
+}
+
+@article{glanzerTwoStorageMechanisms,
+  title = {Two {{Storage Mechanisms}} in {{Free Recall I}}},
+  language = {en},
+  author = {GLANZER, MURRAY},
+  pages = {10},
+  file = {/Users/davidjohnbaker/Zotero/storage/G8SR65D6/GLANZER - Two Storage Mechanisms in Free Recall I.pdf}
+}
+
+@article{conradACOUSTICCONFUSIONSIMMEDIATE1964,
+  title = {{{ACOUSTIC CONFUSIONS IN IMMEDIATE MEMORY}}},
+  volume = {55},
+  issn = {00071269},
+  doi = {10.1111/j.2044-8295.1964.tb00899.x},
+  language = {en},
+  number = {1},
+  journal = {British Journal of Psychology},
+  author = {Conrad, R.},
+  month = feb,
+  year = {1964},
+  pages = {75-84},
+  file = {/Users/davidjohnbaker/Zotero/storage/SKVPUG7F/Conrad - 1964 - ACOUSTIC CONFUSIONS IN IMMEDIATE MEMORY.pdf}
+}
+
+@article{colleAcousticMaskingPrimary1976,
+  title = {Acoustic Masking in Primary Memory},
+  volume = {15},
+  issn = {00225371},
+  doi = {10.1016/S0022-5371(76)90003-7},
+  language = {en},
+  number = {1},
+  journal = {Journal of Verbal Learning and Verbal Behavior},
+  author = {Colle, Herbert A. and Welsh, Alan},
+  month = feb,
+  year = {1976},
+  pages = {17-31},
+  file = {/Users/davidjohnbaker/Zotero/storage/T3RMG529/Colle and Welsh - 1976 - Acoustic masking in primary memory.pdf}
+}
+
+@book{cowanWorkingMemoryCapacity2005,
+  address = {New York, NY, US},
+  series = {Working memory capacity},
+  title = {Working Memory Capacity},
+  isbn = {978-1-84169-097-1},
+  abstract = {The idea of one's memory "filling up" is a humorous misconception of how memory in general is thought to work; it actually has no capacity limit. However, the idea of a "full brain" makes more sense with reference to working memory, which is the limited amount of information a person can hold temporarily in an especially accessible form for use in the completion of almost any challenging cognitive task. This groundbreaking book explains the evidence supporting Cowan's theoretical proposal about working memory capacity, and compares it to competing perspectives. Cognitive psychologists profoundly disagree on how working memory is limited: whether by the number of units that can be retained (and, if so, what kind of units and how many?), the types of interfering material, the time that has elapsed, some combination of these mechanisms, or none of them. The book assesses these hypotheses and examines explanations of why capacity limits occur, including vivid biological, cognitive, and evolutionary accounts. The book concludes with a discussion of the practical importance of capacity limits in daily life. Incorporating the latest from the recent surge in research into working memory capacity limits and the remarkable new insights provided by neuroimaging techniques, this book serves as an invaluable resource for all memory researchers and is accessible to a wide range of readers. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  publisher = {{Psychology Press}},
+  author = {Cowan, Nelson},
+  year = {2005},
+  keywords = {Brain,Human Information Storage,Neuroimaging,Short Term Memory},
+  file = {/Users/davidjohnbaker/Zotero/storage/WJMENG4B/2005-16061-000.html},
+  doi = {10.4324/9780203342398}
 }
 
 
